Fix an issue where more recent reveal buttons were center-aligned by default

--- a/ui/app/styles/components/actions.scss
+++ b/ui/app/styles/components/actions.scss
@@ -36,6 +36,9 @@
       padding-left: 0;
       padding-right: 0;
       border-width: 0;
+      span {
+        text-align: left;
+      }
     }
   }
 }
